[package]
name = "exonum-employees"
version = "0.0.0"
publish = false
authors = ["The Exonum Team <exonum@bitfury.com>"]
repository = "https://github.com/exonum/exonum"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
exonum = "0.8"
exonum-configuration = "0.8"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.1"
display_derive = "0.0.0"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.2"
toml = "0.4.0"

[dev-dependencies]
exonum-testkit = "0.6.0"
rand = "0.4"
pretty_assertions = "0.5.0"
assert_matches = "1.2.0"